--- a/joshuaaustin/assets/style.css
+++ b/joshuaaustin/assets/style.css
@@ -230,3 +230,84 @@ footer {
     color: var(--primary-color);
 }
 /* FOOTER STYLES END */
+
+/* UTILITY STYLES START */
+.italis {
+    font-style: italic;
+}
+
+@media screen and (max-width: 790px) {
+    header {
+        width: 100%;
+        justify-content: center;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: left;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    .grid-container{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    header h1 {
+        text-align: center;
+        font-size: 25px;
+    }
+
+    header nav ul li a {
+        padding: 10px;
+    }
+
+    .section-title {
+        display: block;
+        width: 70%;
+        font-size: 30px;
+        border-bottom: 3px solid var(--secondary-color);
+    }
+
+    .bio {
+        justify-content: center;
+    }
+
+    .bio img {
+        margin: 0 auto;
+    }
+
+    .bio-text {
+        width: 80%;
+        margin: 20px auto 30px auto;
+        text-align: center;
+    }
+
+    .grid-container {
+        width: 95%;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .contact{
+        justify-content: center;
+        width: 100%;
+    }
+
+    .contact p {
+        width: 100%;
+        margin: 20px auto 35px auto;
+        text-align: center;
+    }
+
+    .contact ul {
+        width: 80%;
+        margin: 0 10% 20px 10%;
+        line-height: 1.5;
+    }
+}
+/* UTILITY STYLES END */
